# gpwgpu

./: .gitignore  Cargo.toml
core/: Cargo.toml
core/src/: automatic_buffers.rs  lib.rs  parser.rs  shaderpreprocessor.rs  utils.rs
macros/: Cargo.toml
macros/src/: lib.rs
my-core/: Cargo.toml
my-core/src/: automatic_buffers.rs  lib.rs  parser.rs  shaderpreprocessor.rs  shaderpreprocessor_backup.rs  utils.rs
src/: automatic_buffers.rs  lib.rs  old_operations.rs
src/operations/: convolutions.rs  mod.rs  reductions.rs  simple.rs
src/operations/shaders/: 1d_strides.wgsl  coalesced_separable_convolution.wgsl  coalesced_separable_convolution.wgsl_  last_reduction.wgsl  reduce.wgsl  simple.wgsl  square_residuals.wgsl  utils.wgsl
tests/: grey_lion.tiff  test1.rs
tests/dumps/: gaussian_smoothing.ipynb  inspection.ipynb
tests/notebooks/: gaussian_smoothing.ipynb
tests/parser_test_shaders/: first.wgsl
tests/test_shaders/: first.wgsl  for_loop.wgsl  second.wgsl
