[workspace]
members = ["macros", "my-core"]

[workspace.dependencies]
wgpu = "0.16.1"
bytemuck = { version = "1.12.1", features = ["derive"] }
once_cell = "1.18.0"
quote = "1.0.28"
syn = {version = "*", features = ["full"]}
bincode = "1.3.3"
slow_primes = "0.1.14"


[package]
name = "gpwgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
my-core = { path = "my-core" }
macros = { path = "macros" }
wgpu = { workspace = true }
bytemuck = { workspace = true }
once_cell = { workspace = true }
bincode = { workspace = true }
pollster = "0.3.0"


[dev-dependencies]
pollster = "*"
tiff = "*"
ndarray = "*"
slow_primes.workspace = true


[features]
nightly = ["macros/nightly"]
