[workspace]
members = ["macros", "core"]

[workspace.dependencies]
wgpu = "0.20.1"
bytemuck = { version = "1.12.1", features = ["derive"] }
once_cell = "1.18.0"
quote = "1.0.28"
syn = {version = "2.0.33", features = ["full"]}
bincode = "1.3.3"
slow_primes = "0.1.14"
pollster = "0.3.0"


[package]
name = "gpwgpu"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A crate intended to make it easier to do general purpose GPU programming (GPGPU) in wgpu."

[dependencies]
gpwgpu_core = { path = "core", version = "0.1.0" }
gpwgpu_macros = { path = "macros", version = "0.1.0" }
wgpu = { workspace = true }
bytemuck = { workspace = true }
once_cell = { workspace = true }
bincode = { workspace = true }
pollster.workspace = true


[dev-dependencies]
pollster = "*"
tiff = "*"
ndarray = "*"
slow_primes.workspace = true


[features]
nightly = ["gpwgpu_macros/nightly"]
