[package]
name = "gpwgpu_core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Dependencies for the gpwgpu macros crate"


[dependencies]
wgpu.workspace = true
bytemuck.workspace = true
regex = "1.7.1"
thiserror = "1.0.38"
once_cell.workspace = true
quote.workspace = true
syn.workspace = true
nom = "7.1.3"
serde = { version = "1.0.169", features = ["derive"] }
bincode.workspace = true
nom-supreme = "0.8.0"
slow_primes.workspace = true

[dev-dependencies]
pollster = "0.3.0"
