[package]
name = "macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-core = {path = "../my-core"}
proc-macro2 = "1.0.62"
quote.workspace = true
syn.workspace = true
rust-format = "0.3.4"
bincode.workspace = true
wgpu.workspace = true


[lib]
proc-macro = true

[features]
nightly = []
