[package]
name = "my-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { workspace = true } 
bytemuck = { workspace = true }
regex = "1.7.1"
thiserror = "1.0.38"
once_cell = { workspace = true }
